# fastoml

./: .gitignore  CMakeLists.txt  README.md  fastoml.h
bench/: CMakeLists.txt
bench/input/: invalid_syntax.toml  large.toml  medium.toml  small.toml
bench/scripts/: run_bench.py
bench/src/: bench_common.hpp  bench_interfaces.hpp  parse_bench.cpp  parser_fastoml.cpp  parser_toml11.cpp  parser_tomlplusplus.cpp
example/: CMakeLists.txt
example/sample/: sample.toml
example/src/: fastoml_impl.c  main.c
tests/: CMakeLists.txt  test_rw_values.c
